--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 apply plugin: 'java'
+apply plugin: 'application'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+
+mainClassName = 'com.github.cartagena.intercom.invite.CustomersApplication'
 
 repositories {
     mavenCentral()
